voor 5.2 met pavel

--- a/committee.tex
+++ b/committee.tex
@@ -804,6 +804,7 @@ In \ref{ex:mg-extrapose-dp-base} the object, marked in bold, appears in its base
 
 The same asymmetry between CPs and DPs can be observed with relative clauses. A relative clause is a CP, and the head of a relative clause is a DP. The sentences in \ref{ex:extra-headed} contain the relative clause \tit{was er gekocht hat} `what he has stolen'. This is marked in bold in the examples. The (light) head of the relative clause is \tit{das}.\footnote{
 Not all speakers of Modern German accept the combination of \tit{das} as a light head and \tit{was} as a relative pronoun and prefer \tit{das} as a relative pronoun instead. I use the combination of \tit{das} and \tit{was} to have a more minimal pair with the headless relatives (that uses the relative pronoun \tit{was}).
+\label{ftn:das-was}
 }
 In \ref{ex:extra-headed-base}, the relative clause and its head appear in base position. In \ref{ex:extra-headed-only-clause}, the relative clause is extraposed. This is grammatical, because it is possible to extrapose CPs in Modern German. In \ref{ex:extra-headed-head-clause}, the relative clause and the head are extraposed. This is ungrammatical, because it is possible to extrapose DPs.
 
@@ -837,9 +838,9 @@ In conclusion, extraposition facts show that the surface pronoun in Modern Germa
 
 \subsection{The light-headed relative clause}
 
-In this section, I discuss which light-headed relative headless relatives are derived from. This is not easy to determine, because the light head in headless relative is always obligatorily deleted, so it never surfaces.
+In this section, I discuss from which light-headed relatives Modern German headless relatives are derived. This is not easy to determine, because the light head in headless relative is always obligatorily deleted, so it never surfaces.
 
-In \ref{ex:mg-light-headed}, I show two types of light-headed relatives that differ in their choice of relative pronoun.
+In \ref{ex:mg-light-headed}, I give the two types of light-headed relatives that Modern German has. They differ in their choice of relative pronoun.
 
 \ex.\label{ex:mg-light-headed}
 \ag. Jan umarmt den \tbf{den} \tbf{er} \tbf{mag}.\\
@@ -849,51 +850,51 @@ Jan hugs \tsc{d}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rel}.\tsc{m}.\tsc{sg}.\tsc{acc}
 Jan hugs \tsc{d}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rel}.\tsc{m}.\tsc{sg}.\tsc{acc} he likes\\
 `Jan hugs the man that he likes.'\label{ex:mg-wh-for-light-headed}
 
-In \ref{ex:mg-d-for-light-headed}, the \tsc{d}-pronoun is used that generally appears in headed relatives. An example of a headed relative is given in \ref{ex:mg-d-for-headed}.
+In \ref{ex:mg-d-for-light-headed}, the relative pronoun is the \tsc{d}-pronoun which generally appears in headed relatives. An example of a headed relative is given in \ref{ex:mg-d-for-headed}.
 
 \exg. Jan umarmt den Mann \tbf{den} \tbf{er} \tbf{mag}.\\
 Jan hugs \tsc{d}.\tsc{m}.\tsc{sg}.\tsc{acc} man \tsc{rel}.\tsc{m}.\tsc{sg}.\tsc{acc} he likes\\
 `Jan hugs the man that he likes.'\label{ex:mg-d-for-headed}
 
-I exclude the possibility that Modern German headless relatives are derived from these light-headed relatives, because they have appear with the incorrect relative pronoun.
+I exclude the possibility that Modern German headless relatives are derived from these light-headed relatives, because they appear with the incorrect relative pronoun.
 
-In \ref{ex:mg-wh-for-light-headed}, the \tsc{wh}-pronoun is used that generally appears in headed relatives.\footnote{
-At first sight it seems like \citet{fuss2014} discuss a exception to this claim, namely headless relatives with \tsc{d}-pronouns. However, they claim that these headless relatives are actually light-headed relatives in which one of two syncretic elements is deleted by haplology.
-}
-An example of the headless relative is given in \ref{ex:mg-wh-for-headless}.
+In \ref{ex:mg-wh-for-light-headed}, the relative pronoun is the \tsc{wh}-pronoun which generally appears in headed relatives. An example of a headless relative is given in \ref{ex:mg-wh-for-headless}.
 
 \exg. Jan umarmt \tbf{wen} \tbf{er} \tbf{mag}.\\
 Jan hugs \tsc{rel}.\tsc{an}.\tsc{acc} he likes\\
 `Jan hugs who he likes.'\label{ex:mg-wh-for-headless}
 
-At first sight, it looks like headless relatives can be derived from this light-headed relative. This is exactly what \citet{hanink2018} does. She argues that the feature content of the light head and the relative pronoun is the same. Therefore, the light head is by default deleted. Only if the light head carries an extra focus feature it surfaces.
+At first sight, it looks like headless relatives can be derived from this light-headed relative.\footnote{
+This is exactly what \citet{hanink2018} does. She argues that the feature content of the light head matches the feature content of the relative pronoun. Therefore, the light head is by default deleted. Only if the light head carries an extra focus feature it surfaces.
+}
+I argue that this is not the case. I already briefly noted in footnote \ref{ftn:das-was} that not all speakers of Modern German allow for the combination of a \tsc{d}-pronoun as light head and a \tsc{wh}-pronoun as relative pronoun. Some of my informants reported that the meaning of these two elements are incompatible for them. They prefer the \tsc{d}-pronoun as relative pronoun instead.
+I assume that the demonstrative \tit{den} spells out features having to do with definiteness. The relative pronoun \tit{wen} in \ref{ex:mg-wh-for-light-headed} spells out features having to do with sets of alternatives. The combination of this two does not match. A better match for the demonstrative is the relative pronoun \tit{den} in \ref{ex:mg-d-for-light-headed}, which also spells out features having to do with definiteness.
 
-I take a slightly different approach. I assume that the demonstrative \tit{den} in \ref{ex:mg-wh-for-light-headed} has different features from the relative pronoun \tit{wen}. I assume that the demonstrative spells out features having to do with definiteness and that the relative pronoun spells out features having to do with free choice. This could also be an explanation for why certain German speakers do not allow for the combination of this demonstrative and relative pronoun and prefer the \tsc{d}-pronoun as relative pronoun in light-headed relatives instead. Their main objection was the reported clash in meaning between the \tsc{wh}-pronoun and the \tsc{d}-pronoun.
-
-I stress the interpretation of headless relatives in Modern German, because the acceptability of the construction seems to correlate with one of its possible interpretation. Headless relatives can be combined with the the particle \tit{auch immer} `ever'.
+The definite aspect of the demonstrative as a light head is even more problematic in the context of a headless relative. The main interpretation of headless relatives is namely not a definite one. Consider the headless relative in \ref{ex:mg-wh-for-headless-ever} that is combined with the the particle \tit{auch immer} `ever'. Light-headed relatives do not allow for this particle to be inserted.
 
 \exg. Jan unarmt \tbf{wen} {\tbf{auch} \tbf{immer}} \tbf{er} \tbf{mag}.\\
 Jan hugs \tsc{rel}.\tsc{an}.\tsc{acc} ever he likes\\
 `Jan hugs whoever he likes.'\label{ex:mg-wh-for-headless-ever}
 
-The sentence in \ref{ex:mg-wh-for-headless-ever} has two interpretations (see \citet{s̆imík2020} for a recent elaborate overview on the semantics of free relatives). The first interpretation is described as universal-like and the second as definite-like. The universal-like interpretation corresponds to a universal quantifier: Jan hugs everybody that he likes. The definite-like interpretation corresponds to a definite description: Jan hugs the person that he likes.
+The sentence in \ref{ex:mg-wh-for-headless-ever} has two interpretations (see \citealt{s̆imík2020} for a recent elaborate overview on the semantics of free relatives). The first interpretation is described as universal-like and the second as definite-like. The universal-like interpretation corresponds to a universal quantifier: Jan hugs everybody that he likes. The definite-like interpretation corresponds to a definite description: Jan hugs the person that he likes. The latter interpretation is compatible with the light-headed relative in \ref{ex:mg-wh-for-light-headed}.
 
-\pgcitet{s̆imík2020}{4} notes that some languages do not easily allow for the definite-like interpretation of headless relatives with an \tit{ever}-morpheme. There is no language documented that does not allow for the universal-like interpretation, but it does allow the definite-like interpretation.
+\pgcitet{s̆imík2020}{4} notes that some languages do not easily allow for the definite-like interpretation of headless relatives with an \tit{ever}-morpheme. There is no language documented that does not allow for the universal-like interpretation, but does allow the definite-like interpretation.
 In the same spirit, informants have reported to me that headless relatives with case mismatches become more acceptable in the universal-like interpretation compared to the definite-like interpretation.
-What I take away from that, is that the universal-like interpretation of headless relatives is the main interpretation to account for.
+What I take away from that, is that the universal-like interpretation of headless relatives is the main interpretation that should be accounted for. This is not the interpretation that the light-headed relative in \ref{ex:mg-d-for-light-headed} provides.
 
-This interpretation seems not very compatible a definite \tsc{d}-pronoun as \tit{den} in \ref{ex:mg-wh-for-light-headed}. I suggest that the light head is instead a weak demonstrative \citep{schwarz2009}.
-
-The light head in \ref{ex:mg-wh-for-light-headed} is what \citet{schwarz2009} calls a strong demonstrative. This type of demonstrative is used when there is an anaphoric relation. Often there is a linguistic antecedent that is referred back to. I give an example in \ref{ex:mg-florian-strong}. The strong demonstrative is \tit{dem} that precedes \tit{Freund} `friend', which refers back to the linguistic antecedent \tit{einen Freund} `a friend'.
+I suggest that the light head is a form that shows resemblance to the weak definite of \citet{schwarz2009}. \citet{schwarz2009} distinguishes strong and weak definites in Modern German. The strong definite is anaphoric in nature, and the weak definite encodes uniqueness. First I give an example of a strong definite in \ref{ex:mg-florian-strong}. The strong definite is \tit{dem} that precedes \tit{Freund} `friend'. It refers back to the linguistic antecedent \tit{einen Freund} `a friend'.
 
 \exg. Hans hat heute einen Freund zum Essen mit nach Hause gebracht. Er hat uns vorher ein Foto von dem Freund gezeigt.\\
 Hans has today a friend {to the} dinner with to home brought he has us beforehand a photo of the\scsub{strong} friend shown\\
 `Hans brought a friend home for dinner today. He had shown us a photo of the friend beforehand.'\label{ex:mg-florian-strong}
 
-In headless relatives, there is no anaphoric relation or linguistic antecedent to refer back to.
-% explain?
+In a light-headed relative, this is appropriate when the light head refers back to something or someone introduced earlier in the discourse. An example of such a context is given \ref{ex:mg-context-strong}.
 
-What \citet{schwarz2009} calls a weak demonstrative is more compatible with the light head in headless relatives. Weak articles are used when situational uniqueness is involved. Uniqueness can be global or within a restricted domain. I give two examples in \ref{ex:mg-florian-weak}. In \ref{ex:mg-florian-weak-hund}, the dog is unique in this specific situation of the break-in, but it has not been mentioned in the discourse before, so it is not referred back to. In \ref{ex:mg-florian-weak-mond}, the moon is unique for us people on the planet.
+\ex. Yesterday Jan met with two friends. He likes one of them. The other one he does not like so much.\label{ex:mg-context-strong}
+
+Following this context, the light head \tit{den}, so the strong definite, is appropriate. This, however, is not the universal-like interpretation I discussed is the main interpretation that should be accounted for in headless relatives.
+
+Weak definites are used when situational uniqueness is involved. This uniqueness can be global or within a restricted domain. I give two examples in \ref{ex:mg-florian-weak}. In \ref{ex:mg-florian-weak-hund}, the dog is unique in this specific situation of the break-in. In \ref{ex:mg-florian-weak-mond}, the moon is unique for us people on the planet.
 
 \ex.\label{ex:mg-florian-weak}
 \ag. Der Einbrecher ist {zum Glück} vom Hund verjagt worden.\\
@@ -903,17 +904,15 @@ the burglar is luckily {by the\scsub{weak}} dog {chased away} been\\
 Armstrong flew as {first one} {to the\scsub{weak}} moon\\
 `Armstrong was the first one to fly to the moon.' \flushfill{Modern German, \pgcitealt{schwarz2009}{40}}\label{ex:mg-florian-weak-mond}
 
-% So how does this apply to headless relatives?
+% question:
 
-So, I propose that headless relatives in Modern German are derived from the light-headed relatives as in \ref{ex:mg-base-headless-rels}.
+In line with this, I propose that headless relatives in Modern German are derived from the light-headed relatives as in \ref{ex:mg-base-headless-rels}. The brackets around the light head indicate that it is obligatorily deleted.
 
 \exg. Jan umarmt [ən] \tbf{wen} \tbf{er} \tbf{mag}.\\
-Jan hugs \tsc{dem}.\tsc{an}.\tsc{acc} \tsc{rel}.\tsc{an}.\tsc{acc} he likes\\
+Jan hugs \tsc{lh}.\tsc{an}.\tsc{acc} \tsc{rel}.\tsc{an}.\tsc{acc} he likes\\
 `Jan hugs who he likes.'\label{ex:mg-base-headless-rels}
 
-% The deletion of the light head is obligatory. Why?
-
-This element does not surface as light head in a headless relative, because the deletion is obligatory, but it does surface somewhere else, namely as weak demonstrative. I assume that the clitic is syncretic with the light head in Modern German. In Section \ref{ch:discussion} I come back to how they differ from each other.
+% question:
 
 \ex.
 \ag. Hat ər einen Motorrad?\\
@@ -926,7 +925,11 @@ This element does not surface as light head in a headless relative, because the 
  I follow \tsc{dem}.\tsc{dat}\scsub{weak} to house\\
  `I follow him home.'
 
+%
+
 \subsection{Decomposing light heads and relative pronouns}
+
+%
 
 In this section I discuss two light heads and two relative pronouns. These are the two element that I compare the constituents of at the end of this section. The forms are the animate singulars in nominative and accusative case, given in \ref{ex:mg-lhs-rels}.
 
@@ -940,7 +943,7 @@ In this section I discuss two light heads and two relative pronouns. These are t
 \bg. ə-n\\
  `\tsc{lh}.\tsc{an}.\tsc{sg}.\tsc{acc}'\\
 
-I decompose the relative pronouns in three morphemes: the \tit{w}, the \tit{e} and the final consonant. I splits the light heads up into two morphemes: \tit{ə} and the final consonant.
+I decompose the relative pronouns in three morphemes: the \tit{w}, the \tit{e} and the final consonant. I splits the light heads up into two morphemes: \tit{ə} and the final consonant. For each morpheme, I discuss which features they spell out. Then I give the feature content of light heads and relative pronouns as a whole. Finally, I give the lexical entries for each of the morphemes.
 
 I start with the morpheme \tit{w} of the relative pronoun. Table \ref{tbl:mg-paradigm-wh-rels} gives the animate and inanimate forms of the relative pronouns in three cases: nominative, accusative and dative.
 
@@ -959,13 +962,13 @@ I start with the morpheme \tit{w} of the relative pronoun. Table \ref{tbl:mg-par
   \label{tbl:mg-paradigm-wh-rels}
 \end{table}
 
-The \tit{w} combines with the same endings as the \tit{d} does in demonstratives (or relative pronouns in headed relatives) in Modern German. Table \ref{tbl:mg-paradigm-dem} gives the singular forms in three gender and three cases.\footnote{
+The \tit{w} combines with the same endings as the \tit{d} does in demonstratives (or relative pronouns in headed relatives). Table \ref{tbl:mg-paradigm-dem} gives the singular forms in three gender and three cases.\footnote{
 Note here that the relative pronouns, unlike the demonstratives, do not have a feminine form for the relative pronouns in Table \ref{tbl:mg-paradigm-wh-rels}. Demonstratives also have plural forms (which are not given here), and relative pronouns do not. As far as I know, this holds for all relative pronouns in languages of the internal-only type (cf. also for Finnish, even though it makes a lot of morphological distinctions) and of the matching type. Relative pronouns in languages of the unrestricted type do inflect for feminine, as well as always-external languages. In Chapter \ref{ch:discussion} I return to this observation in relation with the always-external languages.
 }
 
 \begin{table}[htbp]
  \center
- \caption {Modern German demonstrative pronouns}
+ \caption {Modern German demonstrative pronouns} %dieser source
   \begin{tabular}{cccc}
   \toprule
               & \ac{m}  & \tsc{n} & \tsc{f} \\
@@ -978,23 +981,21 @@ Note here that the relative pronouns, unlike the demonstratives, do not have a f
   \label{tbl:mg-paradigm-dem}
 \end{table}
 
-This identifies the \tit{d} and, more importantly for the discussion here, the \tit{w} as a separate morpheme. The morpheme \tit{w} appears besides in headless relatives clauses, also as interrogative pronouns. An example is given in \ref{ex:mg-interrogative}.
+This identifies the \tit{d} and, more importantly for the discussion here, the \tit{w} as a separate morpheme. The morpheme \tit{w} appears besides in headless relatives clauses also in different contexts, such as interrogative pronouns. I give an example in \ref{ex:mg-interrogative}.
 
 \exg. Wer ist da?\\
 who is there\\
 `Who is there?'\label{ex:mg-interrogative}
 
-According to cf. Hachem, \tit{w}-elements triggers the construction of a set of alternatives in the sense of Rooth (1985; 1992).\footnote{
+Two features that \tit{w} spells out are important for the discussion here. The first one I refer to as \tsc{wh}. This is the meaning part that relative pronouns and interrogatives share: the \tsc{wh}-element triggers the construction of a set of alternatives in the sense of Rooth (1985; 1992).\footnote{
 This contrasts with the \tsc{d}, which is responsible for establishing a definite reference. I return to the \tsc{d} in Section \ref{sec:deriving-nonmatching}
 }
-I adopt this interpretation for the feature I call \tsc{wh}. %is this kind of generally accepted?
-As a relative pronoun, the \tsc{wh}-pronoun establishes some kind of relation. I call the feature that is responsible for that \tsc{rel}.
-This brings me to the lexical entry for \tit{w} in \ref{ex:mg-entry-w}.%read lander and baunaz
-(see also Baunaz and Lander)
+The second relevant feature is \tsc{rel}, which establishes a relation.
+In sum, the \tit{w} spells out the features \tsc{wh} and \tsc{rel}, shown in \ref{ex:mg-w-features}. This is not a lexical entry, but only a notation that sums of which features the \tit{w} spells out. I give lexical entries at the end of this section.
 
-\ex. [\tsc{wh} + \tsc{rel}] = \tit{w}
+\ex. [\tsc{wh} + \tsc{rel}] = \tit{w}\label{ex:mg-w-features}
 
-I continue with the final consonant, which is present in the relative pronoun and in the light head. The final consonant can be observed in several contexts besides light heads and relative pronouns. Table \ref{tbl:mg-str-adj} gives an overview of strong adjective \tit{neu} `new' in Modern German in two numbers, three genders and three cases.\footnote{
+I continue with the final consonants (\tit{r} and \tit{n} ), which is present in the relative pronoun and in the light head. The final consonant can be observed in several contexts besides light heads and relative pronouns. Table \ref{tbl:mg-str-adj} gives an overview of strong adjective \tit{neu} `new' in Modern German in two numbers, three genders and three cases.\footnote{
 The vowel preceding the final consonant is written as \tit{e}. I write it as \tit{ə}, because this is how it is pronounced. I make this distinction to emphasize that this differs from the vowel used in the relative pronouns. It might be the same as the \tit{ə} in the light head.
 }
 
@@ -1030,31 +1031,37 @@ Table \ref{tbl:mg-pers-pron} gives an overview of the third person pronouns in M
   \label{tbl:mg-pers-pron}
 \end{table}
 
-Table \ref{tbl:mg-str-adj} and \ref{tbl:mg-pers-pron} show that the final consonants differ between gender, number and case. I conclude from that that the consonant realizes features having to do with gender, number and case.
+Table \ref{tbl:mg-str-adj} and \ref{tbl:mg-pers-pron} show that the final consonants take different shapes depending on gender, number and case. I conclude from that that the consonant realizes features having to do with these three aspects.
 
-I only discuss singular masculine forms in nominative and accusative case, so I only introduce features that are realized by these morphemes.
+Since I only discuss singular masculine forms in nominative and accusative case, I only introduce features that are realized by these morphemes.
+For case, I adopt the features of \citet{caha2009}, already introduced in Chapter \ref{ch:decomposition}. \tsc{f}1 refers to a nominative, and \tsc{f}1 and \tsc{f}2 refers to an accusative.
+For number and gender, I adopt the features that are distinguished by \citet{harley2002} for pronouns. The feature \tsc{class} refers to gender features, which is neuter if it is not combined with any other features. Combining \tsc{class} with the feature \tsc{masc} gives a masculine gender. The feature \tsc{ind} refers to number, which is singular if it is not combined with any other features.
 
-I use the case features of \citet{caha2009}, already introduced in Chapter \ref{ch:decomposition}. \tsc{f}1 refers to a nominative, and \tsc{f}1 and \tsc{f}2 refers to an accusative.
+The \tit{r} is the nominative masculine singular, so it spells out the features \tsc{class}, \tsc{masc}, \tsc{ind} and \tsc{f}1. The \tit{n} is the accusative masculine singular, so it spells out the features that the \tit{r} spells out plus \tsc{f}2. I summarizes this in \ref{ex:r/n-features}.
 
-I adopt the gender and number that are distinguished by \citet{harley2002} for pronouns: \tsc{class}, \tsc{masc} and \tsc{ind}. The feature \tsc{class} refers to gender features, which is neuter if it is not combined with any other features. Combining \tsc{class} with the feature \tsc{masc} gives a masculine gender. The feature \tsc{ind} refers to number, which is singular if it is not combined with any other features.
-
-\ex.
+\ex.\label{ex:r/n-features}
 \a. [\tsc{class} + \tsc{masc} + \tsc{ind} + \tsc{f}1] = \tit{r}
 \b. [\tsc{class} + \tsc{masc} + \tsc{ind} + \tsc{f}1 + \tsc{f}2] = \tit{n}
 
-At this point, only the \tit{e} in the relative pronoun and the \tit{ə} in the light head are left. About the \tit{ə} I can be brief. I assume that the vowel correponds to the feature \tsc{ref}, which \citet{harley2002} claim all pronouns contain.
+At this point, only the \tit{e} in the relative pronoun and the \tit{ə} in the light head are left. About the \tit{ə} I can be brief. I assume that the vowel corresponds to the feature \tsc{ref}, which \citet{harley2002} claim all pronouns contain.
 
 \ex. [\tsc{ref}] = \tit{ə}
 
-This leaves the \tit{e} in the relative pronoun. I assume that, just like \tit{ə}, it contains \tsc{ref}. Besides that, it expressed features involving deixis. Modern German has a syncretic form for the proximal, the medial and the distal \pgcitep{lander2018}{387}. Therefore, it is not very informative. Looking at English, \tsc{wh}-pronouns are marked as at least medial. This can be shown for English. English has proximal and medial/distal demonstratives (evidence Lander/Haegeman).
+%
 
-\ex.
-\ag. this\\
-`close to S'\\
-\bg. that\\
-`not close to S'\\
+This leaves the \tit{e} in the relative pronoun. I assume that, just like \tit{ə}, it contains \tsc{ref}. Besides that, it expresses features involving deixis. Modern German has a syncretic form for the proximal, the medial and the distal \pgcitep{lander2018}{387}. Therefore, it is impossible to tell which of the three a \tsc{wh}-pronoun expresses. Demonstratives in English are informative here, since they distinguishes between proximal on the one hand and medial and distal on the other hand, shown in \ref{ex:english-deixis}.
 
-The \tsc{wh}-pronoun is \tit{what} and \tit{whis} is ungrammatical.
+\ex.\label{ex:english-deixis}
+\ag. th-is\\
+`close to speaker'\\
+\bg. th-at\\
+`not close to speaker'\\
+
+The English \tsc{wh}-pronoun combines with the medial/distal marker, and not with the proximal, shown in \ref{ex:english-wh}.
+
+\ex.\label{ex:english-wh}
+\a. *wh-is
+\b. wh-at
 
 % Ewondo
 %
@@ -1063,7 +1070,7 @@ The \tsc{wh}-pronoun is \tit{what} and \tit{whis} is ungrammatical.
 % mīlí `near H'
 % mīlíí `away from S + H'
 
-It is the medial/distal form that is used on the \tsc{wh}-pronoun. The proximal is ungrammatical on \tsc{wh}-pronoun.
+I conclude from this that the \tsc{wh}-pronoun in Modern German combines with at least the medial.
 
 \footnote{
 Conceptually, this can be made sense of if you see distal as something far away from you as a speaker, because it is unknown to you. Something that is known to you is expressed with a proximal.
@@ -1075,9 +1082,13 @@ Conceptually, this can be made sense of if you see distal as something far away 
 cite Wiltschko.
 }
 
-That means that there is a lexical entry like this, which is used to express the distal, the medial and the proximal.
+\citet{lander2018} propose that a \tsc{dx}\scsub{1} corresponds to a proximal, \tsc{dx}\scsub{1} and \tsc{dx}\scsub{2} corresponds to a medial.
 
-\ex. [\tsc{dx}\scsub{1} + \tsc{dx}\scsub{2}] = \tit{e}
+In sum, the \tit{e} spells out the features \tsc{ref}, \tsc{dx}\scsub{1} and \tsc{dx}\scsub{2}.
+
+\ex. [\tsc{ref} + \tsc{dx}\scsub{1} + \tsc{dx}\scsub{2}] = \tit{e}
+
+Taking this all together, I propose that the structure in \ref{ex:fseq-wh-rel} is the functional sequence for the relative pronoun. It consists of referential features at the bottom (\tsc{ref},) features having to do with deixis (\tsc{dx}\scsub{1} and \tsc{dx}\tsc{2}), with gender (\tsc{class} and \tsc{masc}) and number (\tsc{ind}), with the relative pronoun (\tsc{wh} and \tsc{rel}) and with case (\tsc{f}1 and \tsc{f}2).
 
 \ex. \begin{forest} for tree={s sep=13mm, inner sep=0, l=0}
 [\tsc{acc}P
@@ -1111,6 +1122,9 @@ That means that there is a lexical entry like this, which is used to express the
 \end{forest}
 \label{ex:fseq-wh-rel}
 
+This order is independently supported by work in the literature. .. %The ordering: picallo, kramer, bittner hale, bayer
+
+
 The functional sequence for the light heads:
 
 \ex. \begin{forest} for tree={s sep=13mm, inner sep=0, l=0}
@@ -1136,19 +1150,34 @@ The functional sequence for the light heads:
 \end{forest}
 \label{ex:fseq-wh-lh}
 
-The ordering: picallo, kramer, bittner hale, bayer
+Now I give the lexical entries.
 
-I do privative features here, because I showed I need that for case features, and I want to be consequent.
+\ex.
+\begin{forest} boom
+  [\tsc{ref} [\phantom{xxx}, roof]]
+  {\draw (.east) node[right]{⇔ \tit{ə}}; }
+\end{forest}
+\label{ex:mg-entry-schwa}
 
-\ex. \begin{forest} boom
-  [\tsc{rel}P
-      [\tsc{rel}]
-      [\tsc{wh}]
+
+\ex.
+\begin{forest} boom
+  [\tsc{dist}P
+      [\tsc{dx}\scsub{3}]
+      [\tsc{med}P
+          [\tsc{dx}\scsub{2}]
+          [\tsc{prox}P
+              [\tsc{dx}\scsub{1}]
+              [\tsc{ref} [\phantom{xxx}, roof]]
+          ]
+      ]
   ]
-  {\draw (.east) node[right]{⇔ \tit{w}}; }
-\end{forest}\label{ex:mg-entry-w}
+  {\draw (.east) node[right]{⇔ \tit{e}}; }
+  \label{ex:mg-entry-e}
+\end{forest}
 
-suffixes are the ones that have a unary bottom. In the next section
+
+suffixes are the ones that have a unary bottom. In the next section..
 
 \ex. \begin{forest} boom
   [\tsc{nom}P
@@ -1187,36 +1216,19 @@ suffixes are the ones that have a unary bottom. In the next section
 \end{forest}
 \label{ex:mg-entry-n}
 
-\ex.
-\begin{forest} boom
-  [\tsc{prox}P
-      [\tsc{deix}\scsub{1}]
-      [\tsc{ref} [\phantom{xxx}, roof]]
+
+Prefix has a binary bottom
+
+\ex. \begin{forest} boom
+  [\tsc{rel}P
+      [\tsc{rel}]
+      [\tsc{wh}]
   ]
-  {\draw (.east) node[right]{⇔ \tit{ə}}; }
-\end{forest}
-\label{ex:mg-entry-schwa}
+  {\draw (.east) node[right]{⇔ \tit{w}}; }
+\end{forest}\label{ex:mg-entry-w}
 
 
-\ex.
-\begin{forest} boom
-  [\tsc{dist}P
-      [\tsc{deix}\scsub{3}]
-      [\tsc{med}P
-          [\tsc{deix}\scsub{2}]
-          [\tsc{prox}P
-              [\tsc{deix}\scsub{1}]
-              [\tsc{ref} [\phantom{xxx}, roof]]
-          ]
-      ]
-  ]
-  {\draw (.east) node[right]{⇔ \tit{e}}; }
-  \label{ex:mg-entry-e}
-\end{forest}
-
-
-
-
+% At first sight it seems like \citet{fuss2014} discuss a exception to this claim, namely headless relatives with \tsc{d}-pronouns. However, they claim that these headless relatives are actually light-headed relatives in which one of two syncretic elements is deleted by haplology.
 
 % I argue that there is a different form for the proximal that appears in combination with a reinforcer (Lander). ``As a determiner and a pronoun \tit{dieser} typically refers to something near at hand'' \pgcitep{durrell2011}{5.1.2(a)}
 % The \tit{e} `\tsc{med}/\tsc{dist}' can be used for distal, medial and proximal. The \tit{ə} is typically only compatible with proximal references.
@@ -1265,7 +1277,7 @@ In Nanosyntax, lexical entries are not stuck together directly from the lexicon.
 
 The features are merged one by one, and the constituency is the consequence of the spellout algorithm.
 
-Cyclic phrasal spellout. Caha:declension
+\ex. Cyclic phrasal spellout. Caha:declension\\
 Spellout must successfully apply to the output of every Merge F operation. After successfull spellout, the derivation may terminate, or proceed to another round of Merge F.
 
 \ex. \tbf{Cyclic Override} \citep{starke2018}:\\
@@ -1273,7 +1285,7 @@ Lexicalisation at a node XP overrides any previous match at a phrase contained i
 
 Compare \tit{ə} and \tit{e}, show cyclic override.
 
-Now merge next feature \tsc{class}, which cannot be spelled out anymore.  How do we reach the different constituents? Spellout algorithm.
+Now merge next feature \tsc{class}, which cannot be spelled out anymore. How do we reach the different constituents? Spellout algorithm.
 
 \ex. \tbf{Spellout Algorithm:}\label{ex:spellout-algorithm}
  \a. Merge F and spell out.\label{ex:spellout-algorithm-phrasal}
@@ -1298,10 +1310,24 @@ Note here that the functional sequence is identical for all languages. The same 
 
 The morphemes for gender, number and case (\tit{r}/\tit{n}) appear as a suffix because the feature \tsc{class} cannot be spelled out together with the morpheme for referentiality and deixis (\tit{e}/ə). Therefore, a movement operation takes place, and the feature \tsc{class} can be spelled out on its own. The constituent for \tit{w} in Modern German arises because a complex spec was created.
 
+%
 
+The nominative masculine singular relative pronoun is built as follows.
+The \tsc{ref}P is spelled out as \tit{ə}.
+The \tsc{ref}P is merged with \tsc{dx}\scsub{1}, and the whole phrase (\tsc{prox}P) is spelled out as \tit{e}.
+The \tsc{prox}P is merged with \tsc{dx}\scsub{2}, and the whole phrase (\tsc{med}P) is spelled out as \tit{e}.
 
+The \tsc{med}P is merged with \tsc{class}. There is no lexical entry that matches the whole phrase. There is no specifier to move, so this movement is irrelevant. The complement of \tsc{class}, the \tsc{med}P, is moved to the specifier of \tsc{class}P, and the \tsc{class}P is spelled out as \tit{r}.
+The \tsc{class}P is merged with \tsc{masc}. There is no lexical entry that matches the whole phrase. The specifier of \tsc{class}P, the \tsc{med}P, is moved to the specifier of \tsc{masc}P, and the \tsc{masc}P is spelled out as \tit{r}.
+The \tsc{masc}P is merged with \tsc{ind}. There is no lexical entry that matched the whole phrase. The specifier of \tsc{masc}P, the \tsc{med}P, is moved to the specifier of \tsc{ind}P, and the \tsc{ind}P is spelled out as \tit{r}.
 
-Give a summary for how it is formed.
+The \tsc{ind}P is merged with \tit{wh}. There is no lexical entry that matches the whole phrase, there is no match after spec-to-spec movement, and there is no match after complement movement. Backtracking also does not lead to a matching lexical entry. A complex specifier is created.
+
+The \tsc{wh}P is merged with \tsc{rel}. There is no lexical entry that matches the whole phrase, there is no match after spec-to-spec movement, and there is no match after complement movement. The first step of backtracking is that the two branches, the \tsc{wh}P and the \tsc{ind}P are separated. The \tsc{rel} is merged with the \tsc{wh}P (that only contains the \tsc{wh}) in the left branch and with the \tsc{ind}P in the right branch. In the left branch, the whole phrase (\tsc{rel}P) is spelled out as \tit{w}. In the right branch, there is no spellout. %
+
+The \tsc{rel}P is merged with \tsc{f}1. There is no lexical entry that matches the whole phrase, there is no match after spec-to-spec movement, and there is no match after complement movement. The first step of backtracking is that the two branches, the \tsc{rel}P and the \tsc{ind}P are separated. The \tsc{f}1 is merged with the \tsc{rel}P in the left branch and with the \tsc{ind}P in the right branch. In both branches, there is no lexical entry that matches the whole phrase. In the left branch, there is no specifier to move, so this movement is irrelevant. In the right branch, the specifier of \tsc{ind}P, the \tsc{med}P, is moved to the specifier of \tsc{nom}P, and the \tsc{nom}P is spelled out as \tit{r}.
+
+The final result is given in \ref{ex:mg-spellout-rel-nom}.
 
 \ex.
 \scriptsize{
@@ -1356,7 +1382,11 @@ Give a summary for how it is formed.
 }
 \label{ex:mg-spellout-rel-nom}
 
-Summarize how it is formed.
+The accusative masculine singular relative pronoun is built as the nominative singular relative pronoun, except for that the feature \tsc{f}2 is added to make it an accusative.
+
+The \tsc{nom}P is merged with \tsc{f}2. There is no lexical entry that matches the whole phrase, there is no match after spec-to-spec movement, and there is no match after complement movement. The first step of backtracking is that the two branches, the \tsc{rel}P and the \tsc{nom}P are separated. The \tsc{f}2 is merged with the \tsc{rel}P in the left branch and with the \tsc{nom}P in the right branch. In both branches, there is no lexical entry that matches the whole phrase. In the left branch, there is no specifier to move, so this movement is irrelevant. In the right branch, the specifier of \tsc{nom}P, the \tsc{med}P, is moved to the specifier of \tsc{acc}P, and the \tsc{acc}P is spelled out as \tit{n}.
+
+The final result is given in \ref{ex:mg-spellout-rel-acc}.
 
 \ex.
 \scriptsize{
@@ -1413,7 +1443,15 @@ Summarize how it is formed.
 }
 \label{ex:mg-spellout-rel-acc}
 
-Summarize how it is formed.
+The nominative masculine singular light head is built as follows.
+The \tsc{ref}P is spelled out as \tit{ə}.
+
+The \tsc{ref}P is merged with \tsc{class}. There is no lexical entry that matches the whole phrase. There is no specifier to move, so this movement is irrelevant. The complement of \tsc{class}, the \tsc{ref}P, is moved to the specifier of \tsc{class}P, and the \tsc{class}P is spelled out as \tit{r}.
+The \tsc{class}P is merged with \tsc{masc}. There is no lexical entry that matches the whole phrase. The specifier of \tsc{class}P, the \tsc{ref}P, is moved to the specifier of \tsc{masc}P, and the \tsc{masc}P is spelled out as \tit{r}.
+The \tsc{masc}P is merged with \tsc{ind}. There is no lexical entry that matched the whole phrase. The specifier of \tsc{masc}P, the \tsc{ref}P, is moved to the specifier of \tsc{ind}P, and the \tsc{ind}P is spelled out as \tit{r}.
+The \tsc{ind}P is merged with \tsc{f}1. There is no lexical entry that matched the whole phrase. The specifier of \tsc{ind}P, the \tsc{ref}P, is moved to the specifier of \tsc{nom}P, and the \tsc{nom}P is spelled out as \tit{r}.
+
+The final result is given in \ref{ex:mg-spellout-lh-nom}.
 
 \ex.
 \scriptsize{
@@ -1452,9 +1490,11 @@ Summarize how it is formed.
 }
 \label{ex:mg-spellout-lh-nom}
 
-Summarize how it is formed.
-I combine the morphemes of animate relative pronoun in accusative case.
-\tsc{ref} is complex?
+The accusative masculine singular light head is built as the nominative singular light head, except for that the feature \tsc{f}2 is added to make it an accusative.
+
+The \tsc{nom}P is merged with \tsc{f}2. There is no lexical entry that matched the whole phrase. The specifier of \tsc{nom}P, the \tsc{ref}P, is moved to the specifier of \tsc{acc}P, and the \tsc{acc}P is spelled out as \tit{n}.
+
+The final result is given in \ref{ex:mg-spellout-lh-acc}.
 
 \ex.
 \scriptsize{
