reorganized: rel - lh - compare
kijken hoe dat gaat morgen!

--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -8,7 +8,7 @@
 \nouppercaseheads%no upper case in headers memoir
 %%%FONTS%%%
 
-
+\usepackage{multicol}
 \usepackage{cancel}
 \usepackage{enumerate}
 \usepackage{setspace}
