--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -728,3 +728,45 @@
   publisher={Wiley Online Library},
   doi={10.1111/stul.12061}
 }
+
+@phdthesis{hachem2015,
+  address = {Utrecht},
+  title = {Multifunctionality. {{The Internal}} and {{External Syntax}} of d- and w-{{Items}} in {{German}} and {{Dutch}}},
+  school = {Utrecht University},
+  author = {Hachem, Mirjam},
+  year = {2015}
+}
+
+@article{rooth1992,
+  title = {A {{Theory}} of {{Focus Interpretation}}},
+  volume = {1},
+  number = {1},
+  journal = {Natural Language Semantics},
+  author = {Rooth, Maths},
+  year = {1992},
+  pages = {76-116},
+  doi = {10.1007/bf02342617}
+}
+
+@phdthesis{rooth1985,
+  address = {Amherst},
+  type = {{{PhD Thesis}}},
+  title = {Association with {{Focus}}},
+  school = {University of Massachusets},
+  author = {Rooth, Mats},
+  year = {1985}
+}
+
+@article{colasanti2019,
+  title={Spatial and discourse deixis and the speech act structure of nominals},
+  author={Colasanti, Valentina and Wiltschko, Martina},
+  year={2019}
+}
+
+@book{baker2003,
+  title={Lexical categories: Verbs, nouns and adjectives},
+  author={Baker, Mark C and Baker, Mark Cleland},
+  volume={102},
+  year={2003},
+  publisher={Cambridge University Press}
+}
